Bug 118730 - Label in report builder doesn't have text
Summary: Label in report builder doesn't have text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-AW080
  Show dependency treegraph
 
Reported: 2018-07-12 14:50 UTC by Xisco Faulí
Modified: 2018-10-10 09:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
How it looks in LibreOffice 6.1 RC1 (7.18 KB, image/png)
2018-07-12 14:50 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-12 14:50:34 UTC
Created attachment 143523 [details]
How it looks in LibreOffice 6.1 RC1

Steps to reproduce:

1. open or create a database in Base 
2. select Reports
3. select Create Report in Design View
4. click on Label icon in the Report Controls toolbar and place the label in Page Header, Detail, or Page Footer

-> The label doesn't have text. it should contain the text 'label'

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 4b345f95ce7cb09011892bf465cfdf3811adaf8e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-12 14:52:00 UTC
Regression introduced in

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4b4942224b550235da228655677b5c068a053254

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-04-16 22:34:50 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-05-25 12:31:32 +0200
commit 4b4942224b550235da228655677b5c068a053254 (patch)
tree a660a04a1f7a3eee910da780ece271d68942201d
parent f8edef392245c292398a80f6a858ca19f32df9c3 (diff)
SOSAW080: Derive SdrObjGroup from SdrObjList

Bisected with: bibisect-linux64-6.2

Adding Cc: to Armin Le Grand
Comment 2 Armin Le Grand (collabora) 2018-07-18 12:54:49 UTC
How do I activate my Java stuff quickly...? There are four entres, none seems to work )?)
Comment 3 Armin Le Grand (collabora) 2018-07-25 12:04:12 UTC
SdrPage (or in this case OReportPage) is not available yet in OUnoObject::EndCreate because the OUnoObject is not yet inserted, thus no label gets set (and no SetPropsFromRect is called).
This is a follow up problem to removing the old stuff that first a SdrPage* at the SdrObjects was set *without* the SdrObject being inserted to any SdrObjList. It works no longer - the SdrPage which you can get now is the one the SdrObject *is* inserted at.
Solution is to move that stuff - plus other initializations which were done in OUnoObject::EndCreate before - to where it belongs. This gets rid of OUnoObject::EndCreate completely. It makes OUnoObject::impl_setReportComponent_nothrow no longer needed due to being used only in one place. All initializations move to OUnoObject::CreateMediator which anyways needs to be done when a OUnoObject got created.
Testing if this works as intended...
Comment 4 Commit Notification 2018-07-25 17:23:10 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96b338e62c422ccd23cd33b3f87a463730221514

tdf#118730 Correct ReportDesigner Object creation

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-07-26 09:42:00 UTC
Issue verified in

Version: 6.2.0.0.alpha0+
Build ID: 96faaa6005465661d74b6dbf4879c43b85c68a55
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Armin, thanks for fixing this!!!
Comment 6 Xisco Faulí 2018-07-27 10:14:24 UTC
@Armin, should it be cherry-picked to 6-1 ?
Comment 7 Armin Le Grand (collabora) 2018-07-30 11:53:45 UTC
@Xisco: Did not check if it already happened in lo-6-1 - if yes, then yes.
Comment 8 Armin Le Grand (collabora) 2018-07-30 11:55:12 UTC
@Xisco: looks like it already happend there -> so, yes
Comment 9 Xisco Faulí 2018-07-30 11:57:37 UTC
Yes, the image attached is from LibreOffice 6.1 RC1. Thank you very much!!
Comment 10 Commit Notification 2018-07-30 15:53:06 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90c11ceeb32e8c2fd59028befd726e807a8188cf&h=libreoffice-6-1

tdf#118730 Correct ReportDesigner Object creation

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Alex Thurgood 2018-10-10 07:24:50 UTC
@Armin, Xisco : seems like this is linked to bug 119067 ?

I'm wondering whether Armin's fix is the cause of what is happening in that bug (and its duplicates) ?
Comment 12 Xisco Faulí 2018-10-10 09:37:58 UTC
(In reply to Alex Thurgood from comment #11)
> @Armin, Xisco : seems like this is linked to bug 119067 ?
> 
> I'm wondering whether Armin's fix is the cause of what is happening in that
> bug (and its duplicates) ?

Hi Alex,
they are linked in the way bug 119067 was introduced by the commit fixing this one...